# nyt-xword-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
nyt_xword_scraper/: cli.py  puzzles.py  scrape.py  scraper.py  streaks.py
